// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyMessage render should disable "Verify message" button 1`] = `
<v-form-stub
  data-test="verifying-message-form"
  isformvalid="true"
>
  <v-textarea-stub
    data-test="signed-message-textarea"
    label="Signature"
    value="string"
  />
   
  <v-button-stub
    classname="is-primary is-medium"
    data-test="verify-button"
    disabled="true"
  >
    Verify message
  </v-button-stub>
   
  <!---->
</v-form-stub>
`;

exports[`VerifyMessage render should enable "Verify message" button 1`] = `
<v-form-stub
  data-test="verifying-message-form"
  isformvalid="true"
>
  <v-textarea-stub
    data-test="signed-message-textarea"
    label="Signature"
    value="{}"
  />
   
  <v-button-stub
    classname="is-primary is-medium"
    data-test="verify-button"
  >
    Verify message
  </v-button-stub>
   
  <!---->
</v-form-stub>
`;

exports[`VerifyMessage render should render the initial state of the component 1`] = `
<v-form-stub
  data-test="verifying-message-form"
  isformvalid="true"
>
  <v-textarea-stub
    data-test="signed-message-textarea"
    label="Signature"
  />
   
  <v-button-stub
    classname="is-primary is-medium"
    data-test="verify-button"
    disabled="true"
  >
    Verify message
  </v-button-stub>
   
  <!---->
</v-form-stub>
`;

exports[`VerifyMessage render should show the received address 1`] = `
<v-form-stub
  data-test="verifying-message-form"
  isformvalid="true"
>
  <v-textarea-stub
    data-test="signed-message-textarea"
    label="Signature"
  />
   
  <v-button-stub
    classname="is-primary is-medium"
    data-test="verify-button"
    disabled="true"
  >
    Verify message
  </v-button-stub>
   
  <div
    class="field"
    data-test="address-field"
  >
    <label
      class="label"
    >
      Address
    </label>
     
    <p>
      0xB14Ab53E38DA1C172f877DBC6d65e4a1B0474C3c
    </p>
  </div>
</v-form-stub>
`;
